# PongSFML

./: .gitignore  CMakeLists.txt  README.md
inc/: Ball.h  Game.h  GameObject.h  MovableObject.h  Paddle.h  pgh.h
src/: Ball.cpp  Game.cpp  GameObject.cpp  Games.cpp  Info.cpp  IsMenu.cpp  Menu.cpp  MovableObject.cpp  Paddle.cpp  Start.cpp  main.cpp
